# mdz

./: .gitignore  LICENSE  README.md  build.zig  pyproject.toml
src/: hello.zig
tests/: test_hello.py
